kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-observability-app
  namespace: default
spec:
  type: LoadBalancer

  selector:
    app: sre-observability-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
